# BuckshotRouletteCLI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.client-linux  LLMAPI需求设计.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  设计文档.md
buckshot_roulette/: __init__.py  engine.py  models.py  server.py
buckshot_roulette/backend/: __init__.py  app.py  events.py  models.py  repositories.py  schemas.py  serializers.py  services.py
buckshot_roulette/cli/: __init__.py  client.py  main.py  renderer.py  websocket_client.py
buckshot_roulette/llm/: __init__.py  ai_player_controller.py  context_builder.py  model_factory.py  models.py  output_parser.py  prompt_library.py  repositories.py  serializers.py  services.py
buckshot_roulette/llm/prompts/: __init__.py  ai_decision_hints.md  ai_game_rules.md
docs/: LLMAPI需求设计.md  后端架构设计.md  游戏引擎设计.md  部署指南.md
scripts/: build_client_linux.ps1  build_client_linux.sh  build_client_windows.ps1  config_llm_presets.ps1  config_llm_presets.sh
scripts/pyinstaller/: buckshot_client_entry.py
tests/: test_backend_services.py  test_cli_commands.py  test_cli_renderer.py  test_engine.py  test_entrypoints.py  test_llm_file_repository.py  test_llm_services.py
